# Beholder

./: CMakeLists.txt  README.md  main.cpp  stdinc.hpp
Control/: CMakeLists.txt  gamepad.cpp  gamepad.hpp  robot.cpp  robot.hpp  robotContol.h  state.cpp  state.hpp
Movement/: CMakeLists.txt  legs.hpp
Vision/: CMakeLists.txt  camera.cpp  camera.hpp
docs/: C270-settings.json
src/: CMakeLists.txt  config.hpp.in  main.cpp  main.hpp
src/Config/: .gitignore  CMakeLists.txt  cconfig.hpp  cconfig.hpp.in  config.hpp  varconfig.cpp  varconfig.hpp
src/Control/: CMakeLists.txt  control.cpp  control.hpp  gameController.h  math.cpp  robot.cpp  robot.hpp  robotcontol.h  streamcontrol.hpp  streamcontroldaemon.cpp  streamcontroldaemon.hpp
src/Exceptions/: CMakeLists.txt  connectionexceptions.hpp
src/Movement/: CMakeLists.txt  gun.cpp  gun.hpp  legs.cpp
src/Vision/: CMakeLists.txt  camera.cpp  camera.hpp  visiontools.cpp  visiontools.hpp
